[project]
name = "osu"
description = "Goldy bot extestion that contains everything osu!"
authors = [
    {name = "Goldy", email = "goldy@devgoldy.xyz"},
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = [
    "osu game", "osu!"
]
dependencies = [
    "GoldyBot>=5.0dev11",
]
version = "1.0.0"

[project.optional-dependencies]
dev = [
    "ruff"
]

[project.urls]
GitHub = "https://github.com/Goldy-Bot/osu!"
BugTracker = "https://github.com/Goldy-Bot/osu!/issues"